Fixed Mobile Shifting Issue and added variant titles

--- a/src/styles/collection/collection-page.scss
+++ b/src/styles/collection/collection-page.scss
@@ -1,3 +1,6 @@
+.collections-page{
+  margin-top: 30px;
+}
 .collection-page{
   .container.l{
     width: 1319px;
