--- a/src/styles/global/global.scss
+++ b/src/styles/global/global.scss
@@ -59,7 +59,7 @@ a {
 
 hr {
   border: 0;
-  border-top: $borderWeight $borderStyle $colorAlternate;
+  border-top: $borderWeight $borderStyle #f2f2f2;
   margin: $gutter/1.5 0;
 }
 
