--- a/src/styles/homepage/mobile-nav.scss
+++ b/src/styles/homepage/mobile-nav.scss
@@ -4,27 +4,24 @@
     transition: transform .3s;
   }
   .shifter.shifted, .theme-header.shifted{
-    @include prefix(transform, translateX(280px));
+    @include prefix(transform, translateX(260px));
    
     @include min-query(500px){
       @include prefix(transform, translateX(450px));
     }
   }
-  .theme-header.shifted.show.fixed{
-    @media screen and (-webkit-min-device-pixel-ratio:0)
-      and (min-resolution:.001dpcm) {
-      @include prefix(transform, translateX(45%));
-    } 
-  }  
+ 
 }
 
-
+html.shifted, body.shifted{
+  overflow: hidden;
+  position: relative;
+  height: 100%;
+  width: 100%;
+}
 .theme-nav-toggled.from-left, .theme-nav-toggled.from-right{
-  width: 280px;
-  @media screen and (-webkit-min-device-pixel-ratio:0)
-    and (min-resolution:.001dpcm) {
-    width: 45%;
-  }
+  width: 260px;
+
   transition: left .3s;
   @include min-query(500px){
     width: 450px;
@@ -32,11 +29,8 @@
 }
 
 .theme-nav-toggled.active{
-  left: 280px;
-  @media screen and (-webkit-min-device-pixel-ratio:0)
-    and (min-resolution:.001dpcm) {
-    left: 45%;
-  }
+  left: 260px;
+
   box-shadow: 0px 2px 34px rgba(0, 0, 0, 0.125283);
   @include min-query(500px){
     left: 450px;
